@@ -1,7 +1,7 @@
 /*
  * This file is part of the Score-P software (http://www.score-p.org)
  *
- * Copyright (c) 2013-2014,
+ * Copyright (c) 2013-2015,
  * Forschungszentrum Juelich GmbH, Germany
  *
  * Copyright (c) 2014,
@@ -39,8 +39,16 @@
 
 typedef struct scorep_thread_private_data scorep_thread_private_data;
 
+#ifdef __FUJITSU
+
+static __thread scorep_thread_private_data* TPD = NULL;
+
+#else /* !__FUJITSU */
+
 static scorep_thread_private_data* TPD = NULL;
 #pragma omp threadprivate( TPD )
+
+#endif /* !__FUJITSU */
 
 /* *INDENT-OFF* */
 static void set_tpd_to( scorep_thread_private_data* newTpd );
@@ -73,34 +81,9 @@ scorep_thread_on_create_private_data( scorep_thread_private_data* tpd,
 }
 
 
-
-/* FUJITSU-COMPILER-BUG-WORKAROUND
- * -------------------------------
- * Without any OpenMP directive the Fujitsu compiler creates OpenMP
- * threadprivate variables, e.g., pomp_tpd_, as:
- * $ nm .libs/libscorep_thread_fork_join_omp_tpd.a | grep pomp
- * 0000000000000000 D pomp_tpd_
- * This is not sufficient as instrumented compilation units require
- * the pomp_tpd symbol to be __threadprivate_pomp_tpd_. Using an OpenMP
- * directive in a dummy function solves this issue:
- * $ nm .libs/libscorep_thread_fork_join_omp_tpd.a | grep pomp
- * 0000000000000008 C __threadprivate_pomp_tpd_
- * 0000000000000000 D pomp_tpd_
- */
-static void
-weird_workaround_to_force_fujitsu_compiler_to_generate_threadprivate_variables( void )
-{
-#ifdef __FUJITSU
-    #pragma omp barrier
-#endif /* __FUJITSU */
-}
-
-
 void
 scorep_thread_on_initialize( scorep_thread_private_data* initialTpd )
 {
-    weird_workaround_to_force_fujitsu_compiler_to_generate_threadprivate_variables();
-
     UTILS_BUG_ON( initialTpd == 0, "" );
     UTILS_BUG_ON( scorep_thread_get_model_data( initialTpd ) == 0, "" );
 
